[package]
authors = ["Detoro"]
edition = "2021"
name    = "nylon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util       = "0.3.26"
hyper              = { version = "0.14.25", features = ["full"] }
matchit            = "0.7.0"
napi               = { version = "2.12.7", features = ["napi8", "serde-json", "tokio_rt"] }
napi-derive        = { version = "2.12.5" }
serde              = { version = "1.0.159", features = ["derive"] }
serde_json         = "1.0.95"
tokio              = { version = "1.27.0", features = ["full"] }
tower              = { version = "0.4.13", features = ["make", "util"] }
tower-http         = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing            = "0.1.37"
tracing-subscriber = "0.3.16"
url                = { version = "2.3.1", features = ["serde"] }

[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
trybuild = "1.0.80"

[profile.release]
lto             = 'fat'
opt-level       = 3
overflow-checks = true
panic           = "abort"
