[package]
authors = ["Detoro"]
edition = "2021"
name    = "nylon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi               = { version = "2.15", features = ["serde-json", "tokio_rt"] }
napi-derive        = { version = "2.15" }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["net"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
anyhow             = "1"
axum = "0.7"
futures-util       = "0.3"
http               = "1"
multer             = "3"
futures            = "0.3"
bytes              = "1"

[build-dependencies]
napi-build = "2.1"

[dev-dependencies]
trybuild = "1"

[profile.release]
lto             = 'fat'
opt-level       = 3
overflow-checks = true
panic           = "abort"
